# ml-sandbox

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment_droplet.yml  gnn_experiments.ipynb  main.py  pyproject.toml  qm9_graph_classification.ipynb  regression.py  scratchpad.ipynb
experiments/: autograd.ipynb  classify_latex_symbols.py  experiment.ipynb
experiments/mlutil/mlutil/: datasets.py  trainer.py
experiments/notebooks/: dropout.ipynb  mlp.ipynb
gan/: config.py  train.py
gpt/: config.py  train.py  utils.py
hacks/: classify_latex_symbols.py  gnnconv.py  pca.py  regression.py  regularization.py
mltheory/: __init__.py  gnnconv.py  pca.py  regression.py
mlutil/: setup.py
mlutil/mlutil/: trainer.py
nb/: rest.ipynb
nb/mlutil/: setup.py
nb/mlutil/mlutil/: datasets.py  trainer.py
nb/notebooks/: layer-test.ipynb  masked-lm-tokenizer.ipynb  mnist_concise.ipynb  mps.ipynb  sequences.ipynb  test.ipynb  tokenizers.ipynb
notebooks/: dropout.ipynb  mlp.ipynb  mnist.ipynb  mnist_concise.ipynb
projects/: qm9_experiments.ipynb
realnvp/: train.py
resnet/: config.py  resnet.py  train.py
resnet/checkpoints/: checkpt_01-03-23-18-42-35.pt
rest/: README.md  config.py  train.py
scripts/: regularization.py
transformer/: causal.py  config.py
transformer/de-en.txt/: README  tokenizer-multiun-ende.json
vae/: config.py  example.py  latent_visual.py  train.py  vae.py
